# MSc-thesis-offgrid-renewable-data-center

./: README.md
hydesign/: .coveragerc  .gitignore  .gitlab-ci.yml  .zenodo.json  README.md  environment.yml  pyproject.toml
hydesign/docker/: Dockerfile
hydesign/docs/: Makefile  conf.py  how_to_cite.rst  index.rst  installation.rst
hydesign/docs/notebooks/: Advanced_hpp_model.ipynb  ChangeLog.ipynb  Example_ISO_prob.ipynb  HPP_evaluation_BM.ipynb  HPP_evaluation_P2X.ipynb  Hybridize.ipynb  Quickstart.ipynb  break_even_price_and_PPA.ipynb  constant_output.ipynb  evaluate_with_reliability.ipynb  more_sizing_examples.rst  n2.html  offshore.ipynb  sizing_with_reliability.ipynb
hydesign/docs/publications/: pub_0.rst  pub_1.rst  pub_10.rst  pub_11.rst  pub_12.rst  pub_13.rst  pub_14.rst  pub_15.rst  pub_16.rst  pub_17.rst  pub_18.rst  pub_19.rst  pub_2.rst  pub_20.rst  pub_21.rst  pub_22.rst  pub_23.rst  pub_24.rst  pub_25.rst  pub_26.rst  pub_3.rst  pub_4.rst  pub_5.rst  pub_6.rst  pub_7.rst  pub_8.rst  pub_9.rst
hydesign/hydesign/: Parallel_EGO.py  Parallel_EGO_adjusted_3_2_26.py  __init__.py  battery_degradation.py  find_error.py  hydesign - Snelkoppeling.lnk  nrel_csm_wrapper.py  reliability.py  utils.py
hydesign/hydesign/HiFiEMS/: DEMS.py  Deg_Calculation.py  run.py  utils.py
hydesign/hydesign/assembly/: assembly_rolling_horizon_thijs_10_3_26.py  hpp_assembly.py  hpp_assembly_BM.py  hpp_assembly_P2X.py  hpp_assembly_P2X_bidrectional.py  hpp_assembly_constantoutput.py  hpp_assembly_costantoutput_matching_demand_ideal_output.py  hpp_assembly_costantoutput_max_revenue_ideal_output.py  hpp_assembly_hifi_dems.py  hpp_assembly_hybridization_pv.py  hpp_assembly_hybridization_wind.py  hpp_assembly_offgrid_thijs_2_2_26.py  hpp_assembly_reliability.py  hpp_assembly_tierb2_thijs_3_3_26.py  hpp_assembly_weekly_capacityblocks_thijs_27_2_26.py
hydesign/hydesign/costs/: costs.py  (+2 more)
(+344 files in other folders)
